Error fixes